fix deployed layout spacing and covers

--- a/hexo-blog/themes/fluid/source/css/_pages/_base/_widget/banner.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_base/_widget/banner.styl
@@ -20,6 +20,15 @@
   .banner
     transition none !important
 
+.header-inner
+  min-height 280px
+  max-height 620px
+
+@media (max-width: 767px)
+  .header-inner
+    min-height 240px
+    max-height 420px
+
 if $banner-width-height-ratio > 0
   @media (max-width: unit($banner-width-height-ratio * 100, "vh"))
     .header-inner
