--- a/hexo-blog/themes/fluid/source/css/_pages/_base/base.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_base/base.styl
@@ -38,7 +38,7 @@ img[lazyload]
   object-fit cover
 
 .index-img img[lazyload]
-  object1-fit cover
+  object-fit contain
 
 *[align="left"]
   text-align left
@@ -83,8 +83,6 @@ i.iconfont
   pointer-events none
   z-index -1 !important
 
-/* Ensure main content sits above the canvas */
-header, main, footer, .container
 header, main, footer, .container
   position relative
   z-index 9999
