--- a/hexo-blog/themes/fluid/source/css/_pages/_index/index.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_index/index.styl
@@ -4,17 +4,16 @@
 .index-img
   a
     display block
-    aspect-ratio 16 / 9
-    overflow hidden
+    overflow visible
     border-radius .25rem
     background-color var(--board-color)
 
   img
     display block
     width 100%
-    height 100%
+    height auto
     max-width 100%
-    object-fit cover
+    object-fit contain
     box-shadow 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15)
     border-radius .25rem
     background-color transparent
